refactor: updated swagger
